--- a/verkefni.tex
+++ b/verkefni.tex
@@ -1,3 +1,6 @@
+% TODO make sure at the end that 'Caratheodory' is nowhere
+% TODO fix open intervals. they look ugly
+% TODO skrifað Weierstrass rétt
 % TODO decide if 0 is in \mathbb{N} and make sure it's consistent
 % TODO read and mention Globevnik
 % in F. and M. Riesz chapter ralk about why the function spaces are seperable
@@ -233,17 +236,36 @@ The section could be titled: Glossary, Variable Names, etc.
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \chapter{Introduction}
-
+% TODO define 'extends'
 
 
 \chapter{Preliminaries}
 \section{Measure theory}
+\section{The disk algebra}
 \section{Complex analysis in one variable}
-\subsection{Caratheodory} % TODO Spell checka nafnið
-\subsection{The Riemann Mapping Theorem}
+\subsection{Carathéodory}
+\begin{definition}
+A continuous function $\gamma: [0, 1] \rightarrow \mathbb{C}$ is said to be a \emph{Jordan curve} if $\gamma(0) = \gamma(1)$ and
+\[
+	\gamma(s) = \gamma(t) \implies s = t \tag*{for all $s, t \in ]0, 1[$.}
+\]
+\end{definition}
+The definition above can be restated as: A Jordan curve is a closed simple curve.
+The term `simple' here means that the curve is not self-intersecting.
+The name stems from a famous result by Camille Jordan stating that $\mathbb{C} \setminus \gamma([0, 1])$ has two connected component, one of which is simply connected.
+The simply connected component will be called \emph{the domain bounded by $\gamma$}.
+The proof of this result is rather technical and outside the scope of this thesis \cite{fdsa}\cite{fdas}. % TODO add citation to whyburn chapter 3 and green-krantz p. 393
+The result is however necessary to make statement such as `let $U$ be the domain bounded by $\gamma$'.
+An example of this is the following theorem:
+\begin{theorem}[Carathéodory]
+Let $\Omega_1$ and $\Omega_2$ be domains in $\mathbb{C}$ each bounded by a Jordan curve and $\Phi: \Omega_1 \rightarrow \Omega_2$ be a conformal mapping.
+There exists a continuous injection $\hat{\Phi}: \overline{\Omega_1} \rightarrow \overline{\Omega_2}$ that extends $\Phi$.
+\end{theorem}
+A proof of this can be found in section $13.2$ of \cite{green and krantz}. % TODO motivate the theorem a bit
+\subsection{The Riemann Mapping Theorem} 
 We will start of with a definition. % TODO reword
 \begin{definition}
-A map $f:\ U \rightarrow V$, with open $U, V \subset \mathbb{C}$ is said to be \emph{conformal} if it is holomorphic, bijective, and its inverse is holomorphic.
+A map $f: U \rightarrow V$, with open $U, V \subset \mathbb{C}$ is said to be \emph{conformal} if it is holomorphic, bijective, and its inverse is holomorphic.
 \end{definition}
 \begin{remark}
 The fact that the inverse is homomorphic is actually redundant.
@@ -261,15 +283,48 @@ If $U$ and $V$ are both homeomorphic to $\mathbb{D}$ then there exists a conform
 \end{corollary}
 \begin{proof}
 The Riemann mapping theorem gives us $\Phi_1$, a conformal mapping from $\mathbb{D}$ to $U$, and $\Phi_2$, a conformal mapping from $\mathbb{D}$ to $V$.
-The desired conformal mapping from $U$ to $V$ is then $\Phi_1^{-1} \circ \Phi_2$.
+The desired conformal mapping from $U$ to $V$ is then $\Phi_2 \circ \Phi_1^{-1}$.
 \end{proof}
+In this thesis the disk algebra $\mathcal{A}$ is of special interest so a version of the Riemann mapping theorem that considers continuity at the boundary is desirable.
+We can combine the Riemann mapping theorem and Carathéodory's theorem to achieve the desired theorem.
+The only thing to prove is that a homeomorphism $f$ maps the boundary of a bounded set $U$ to the boundary of $f(U)$ and that a Jordan curve under a homeomorphism is still a Jordan curve.
 \begin{corollary}
-If $K$ is homeomorphic to $\overline{\mathbb{D}}$ then there exists a homeomorphism $\Phi:\ \overline{\mathbb{D}} \rightarrow K$ such that its restriction to $\mathbb{D}$ is a conformal mapping.
+If $K$ is homeomorphic to $\overline{\mathbb{D}}$ then there exists a continuous, injective $\Phi: \overline{\mathbb{D}} \rightarrow K$ such that its restriction to $\mathbb{D}$ is a conformal mapping.
 \end{corollary}
 \begin{proof}
-% Nota Caratheodory. Samskeyting stikunar á jaðri D og grannmótunar á milli D og K ætti að vera Jordan stikun á jaðri K, vonandi.
-TODO
+Firstly, let $U$ be bounded, open set in $\mathbb{C}$,
+	$f: \overline{U} \rightarrow \mathbb{C}$ be an injective continuous map,
+	and let's show that $\partial f(U) = f(\partial U)$.
+Let $p \in \partial U$ and $B_r(z) = \{z \in \mathbb{C};\ |r - z| < r\}$.
+Let's also assume that $f(p) \in f(U)$ and show that it leads to a contradiction.
+There exists an $r > 0$ such that $B_r(p) \subset f(U)$, because $U$ is open and therefore $f(U)$ as well.
+This gives us as an open neighbourhood $f^{-1}(B_r(p)) \subset U$ of $p$, but $p \in \partial U$ implies that on such neighbourhood exists.
+So $f(p)$ is not in $f(U)$ but it is in $\overline{f(U)}$, implying $\partial f(U) \supset f(\partial U)$.
+We can use the same argument to show that $\partial f(U) \subset f(\partial U)$, since $f$ is bijective if we consider it as a map from $\overline{U}$ into $f(\overline{U})$.
+So $f(\partial U) = \partial f(U)$. % TODO skoða þennan hluta mun betur!!
+
+Secondly, let
+	$U$ and $V$ be open sets in $\mathbb{C}$,
+	$\gamma: [0, 1] \rightarrow \partial \mathbb{D}$ Jordan curve,
+	$f: U \rightarrow V$ be homeomorphism,
+Let $\lambda = f \circ \gamma$ and $s, t \in ]0, 1[$ such that $\lambda(s) = \lambda(t)$.
+It suffices to show that $s = t$, since $\lambda(0) = \lambda(1)$ obviously holds.
+We have that $f(z) = f(w)$ implies $x = w$, since $f$ is bijective, and therefore injective.
+So $\lambda(s) = (f \circ \gamma)(s) = (f \circ \gamma)(t) = \lambda(t)$ implies that $\gamma(s) = \gamma(t)$.
+But $\gamma$ is a Jordan curve, so $\gamma(s) = \gamma(t)$ implies $s = t$.
+So $\lambda$ is also a Jordan curve. % TODO reread and make sure this still makes sense
+
+Finally, we can prove the corollary.
+Let $f$ be a homeomorphism from $\overline{\mathbb{D}}$ to $K$.
+The Riemann mapping theorem also gives us a conformal map $\Phi: \overline{\mathbb{D}} \rightarrow K$.
+We know that $\overline{\mathbb{D}}$ is compact, so $K = f(\overline{\mathbb{D}})$ is also compact, since the image of a compact set under a continuous mapping is also compact.
+So $K$ is also bounded.
+So $f(\partial \mathbb{D} = \partial f(\mathbb{D}) = \partial K$ according to our first step and $\partial K$ is a Jordan curve according to the second step, since $\partial \mathbb{D}$ is a Jordan curve.
+So $\Phi$ is a conformal map between two domains bounded, each bounded by a Jordan curve.
+This allows us to use Carathéodory's theorem to extend $\Phi$ continuously and injectively to $\overline{\mathbb{D}}$, concluding the proof.
 \end{proof}
+The Riemann mapping theorem is a strong tool when analyzing holomorphic functions on simply connected domains.
+We can often solve things for the unit disk (or unit square as in \ref{Rudin-Carleson reference here}) and then map that solution to a general simply connected domain. % TODO add ref
 \subsection{Weierstrass M-test}
 \section{Functional analysis}
 \subsection{Hahn-Banach}
@@ -277,6 +332,7 @@ TODO
 \section{Miscellaneous}
 % TODO Ef summa fágaðra falla er samleitini í j.m. þá er hún fáguð
 % TODO Ef summa samfelldra falla er samleitini í j.m. þá er hún samfelld
+% TODO Neðra mat þríhyrningsójöfnunnar, ||x| - |y|| <= |x - y|
 
 
 
@@ -295,7 +351,6 @@ Then there exists an integrable function $\mu > 1$ such that
 	$\mu$ has a bounded derivative on any closed subarc of $\mathbb{T} \setminus H$.
 \end{lemma}
 \begin{proof}
-% Er það?????? The function $\mu$ is found by solving the Dirichlet problem. % TODO Thomas Ransford p. 95 4.2.6 and TODO finish this
 TODO
 \end{proof}
 \begin{lemma}
@@ -326,7 +381,7 @@ Let's call it $h_H$ and define
 \]
 Note that $|\arg h_H(z)| < \pi/4$ since if a $w \in \mathbb{C}$ had an argument outside of this range then its square would have and argument outside of the range $[-\pi/2, \pi/2]$ meaning $\Re w^2 < 0$.
 Also, $q(z) = 0$ if and only if $h_{E_0} = \infty$, so $q$ is zero only on $E_0$, and $q(z) = 1$ if and only if $h_{E_1} = \infty$, so $q$ is one only on $E_1$.
-We now want to show that $|\Re q| \leq 1$.
+We now want to show that $0 \leq \Re q \leq 1$.
 We will let $z, w \in \mathbb{C}$, with $|\arg z|, |\arg w| < \pi/4$ and $\Re z, \Re w > 1$, and show that $0 < \Re z/(w + z) < 1$.
 
 Firstly note that
@@ -341,7 +396,7 @@ so
 \]
 and
 \[
-	|\arg w/z| = |\arg w - \arg z| < |\arg w| + |\arg z| < \pi/4 + \pi/4 = \pi/2.
+	|\arg w/z| = |\arg w - \arg z| \leq |\arg w| + |\arg z| < \pi/4 + \pi/4 = \pi/2.
 \]
 So $w/z$ is in the right halfplane and, since $\arctan(y/x)$ is decreasing in $x$ for positive $y$, we get
 \[
@@ -356,15 +411,20 @@ We know $\arctan(y/x)$ is decreasing in $x$ for positive $y$ because
 	\frac{d}{dx}\arctan \left (\frac{y}{x} \right ) = -\frac{y}{x^2 + y^2} < 0.
 \]
 So $0 < \Re z/(w + z)$.
-We can also see that
+Note that $0 < \Re z/(w + z) \implies 0 > \Re -w/(w + z)$ due to $z$ and $w$ being constrained in the same manner.
+So
 \begin{align*}
-	\left | \Re \frac{z}{z + w} \right |
-	&= \frac{1}{2} \left | \frac{z}{z + w} + \frac{\overline{z}}{\overline{z} + \overline{w}} \right |\\
-	&\leq \frac{1}{2} \left ( \frac{|z|}{|z + w|} + \frac{|\overline{z}|}{|\overline{z} + \overline{w}|} \right )\\
-	&= \frac{|z|}{|z + w|}\\
-	&= \frac{1}{1 + |w|/|z|}\\
-	&< 1.
+	0
+	&> \Re \frac{-w}{w + z}\\
+	&= \Re \frac{z - (z + w)}{w + z}\\
+	&= \Re \left ( \frac{z}{w + z} - 1 \right )\\
+	&= \Re \frac{z}{w + z} - 1\\
+	\implies 1 &> \Re \frac{z}{z + w}.
 \end{align*}
+So we have shown that
+\[
+	0 < \Re \frac{z}{z + w} < 1.
+\]
 
 So we have constructed a function $q$ that maps $\overline{D}$ to the ribbon $\{z;\ 0 \leq \Re z \leq 1\}$.
 We then let $\Phi$ be the conformal mapping from the ribbon $\{z;\ 0 \leq \Re z \leq 1\}$ to $\{z;\ 0 \leq \Re z \leq \Re \alpha\}$. % TODO Rudin calls these ribbons rectangles, but couldn't the imaginary part be unbounded?
@@ -399,7 +459,7 @@ So we can define $Q_k \subset 2^{1 - n}S$ for $k = 1, 2, ..., p$ such that $Q_k 
 We can choose $c_k \in Q_k \cap 2^{-n}$ since $Q_k$ has side length $2^{-n}$ and is a subset of $2^{-n + 1}$ and both are closed.
 We can now define
 \[
-	f_n(z) = c_k, \tag{$z \in E_k,\ k = 1, 2, ..., p$.}
+	f_n(z) = c_k, \tag*{$z \in E_k,\ k = 1, 2, ..., p$.}
 \]
 If we then look at $\lambda_n = f - \sum_{k = 0}^nf_k = \lambda_{n - 1} - f_n$ we see that $\lambda_n(E) \subset 2^{-n}S$ due to the way we decomposed $E$ into $E_1, E_2, ..., E_p$ using the oscialltions of $\lambda_{n - 1}$.
 This means we can continue the process.
